# matray

./: .gitignore  LICENSE  README.md  install_icons.sh  meson.build
.github/workflows/: build.yml
po/: LINGUAS  POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  (+162 more)
resources/: LICENSE_ICONS  ui.gresource.xml
resources/misc/: autostart.desktop  autostart_off.desktop  matray.desktop
resources/ui/: AboutWindow.ui  SettingsWindow.ui
src/: Enums.vala  NewsReader.vala  Settings.vala  main.vala
src/data/: Config.vala  ItemCollection.vala  NewsItem.vala  Request.vala
src/ui/: AboutWindow.vala  SettingsWindow.vala  TrayIcon.vala
